Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/Tracking_Digest__c.object-meta.xml
<CustomObject>
    <description>This object will store changes to Lead/Opp so it can be reported on by users without a Full SFDC license.</description>
    <label>Tracking Digest</label>
    <nameField>
        <displayFormat>DIGEST-{000000000}</displayFormat>
        <label>Tracking Digest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Digests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>