Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>The Account Name listed on the Lead</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>