Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The Converted Amount of the Opp
(INC0298928) As per the Vibha Bhatia&#39;s request, we have changed the &quot;Amount &quot; field label to &quot;Amount Converted (USD)&quot;</description>
    <label>Amount Converted (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>