Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/fxUserLicenseType__c.field-meta.xml
<CustomField>
    <fullName>fxUserLicenseType__c</fullName>
    <description>Get license type of users so that we can auto apply the PSET:  OBJECT: Tracking Digest 1000: Default Read using Scheduled L.FLOW 8401 Add PSET for Tracking</description>
    <formula>Owner:User.License_type__c</formula>
    <label>fxUserLicenseType</label>
    <type>Text</type>
</CustomField>