Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/ID_Lead__c.field-meta.xml
<CustomField>
    <fullName>ID_Lead__c</fullName>
    <description>The Native Lead ID</description>
    <label>ID Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>