Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/ID_Opp__c.field-meta.xml
<CustomField>
    <fullName>ID_Opp__c</fullName>
    <description>The Native Opp ID</description>
    <label>ID Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>