Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/isMe__c.field-meta.xml
<CustomField>
    <fullName>isMe__c</fullName>
    <formula>OR( 
   Originator__c =  $User.Email
   , OwnerId = $User.Id
  )</formula>
    <label>isMe</label>
    <type>Checkbox</type>
</CustomField>