Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <description>The Name of the Lead (Usually First + Last)</description>
    <label>Lead Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>