Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <description>The Owner Full Name of the Lead
(INC0300507)As per the Vibha Bhatia&#39;s request, we have changed the &quot;Lead Owner&quot; field label to &quot;Lead:Sales Rep&quot;</description>
    <label>Lead:Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>