Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Lead_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_Lines__c</fullName>
    <description>Product Lines from Lead</description>
    <inlineHelpText>Product Lines from Lead</inlineHelpText>
    <label>Lead Product Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>