Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/LeadModified__c.field-meta.xml
<CustomField>
    <fullName>LeadModified__c</fullName>
    <description>Date/Time Lead/Opp was last modified</description>
    <label>Lead Modified</label>
    <type>DateTime</type>
</CustomField>