Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Opp_Grow_Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Opp_Grow_Employee_Email__c</fullName>
    <description>Maps from Lead when Field Service has created the Lead
(INC0298928) As per vibha, we have created &quot;Opp Grow Employee Email&quot; Field.</description>
    <label>Opp Grow Employee Email</label>
    <type>Email</type>
</CustomField>