Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Opp_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Line__c</fullName>
    <description>Product lines from Opp</description>
    <inlineHelpText>Product lines from Opp</inlineHelpText>
    <label>Opp Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>