Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/OppModified__c.field-meta.xml
<CustomField>
    <fullName>OppModified__c</fullName>
    <description>Date Opp was last modified</description>
    <label>Opp Modified</label>
    <type>DateTime</type>
</CustomField>