Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <description>The email address of the person who submitted the Grow Lead
(INC0300507) As per the Vibha Bhatia&#39;s request, we have changed the &quot;Originator&quot; field label to &quot;Lead Originator&quot;</description>
    <inlineHelpText>The email address of the person who submitted the Grow Lead.</inlineHelpText>
    <label>Lead Originator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>