Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/OwnedbyCompanyINT__c.field-meta.xml
<CustomField>
    <fullName>OwnedbyCompanyINT__c</fullName>
    <description>Owned by Company of Interaction</description>
    <inlineHelpText>Owned by Company of Interaction</inlineHelpText>
    <label>Owned by Company (INT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_050_Owned_by_Company</valueSetName>
    </valueSet>
</CustomField>