Perkin-UAT/force-app/main/default/objects/Tracking_Digest__c/fields/OwnedbyCompanyOriginator__c.field-meta.xml
<CustomField>
    <fullName>OwnedbyCompanyOriginator__c</fullName>
    <description>Owned by Company of the Referrer/Originator</description>
    <inlineHelpText>Owned by Company of the Referrer/Originator</inlineHelpText>
    <label>Owned by Company (Originator)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_050_Owned_by_Company</valueSetName>
    </valueSet>
</CustomField>